--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,10 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  padding: 133px 30px;
 }
 
 h1,
@@ -35,4 +36,327 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  gap: 26px;
+}
+
+.result__video-container {
+  position: relative;
+  margin: 75px 0px 16px;
+  width: 711px;
+  height: 386px;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 225px 212px 194px;
+  width: 711px;
+  height: 54px;
+  gap: 40px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+/* text */
+.search-form__textfield {
+  width: 100%;
+  border: none;
+  border-radius: 0px;
+  padding: 2px 0px;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  line-height: 22px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+input[type="text"] {
+  border-top: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+  padding: 1px 0px;
+}
+
+input[type="text"]:active {
+  border: 2px solid #fff;
+  border-radius: 0px;
+}
+
+input[type="text"]:hover {
+  border: 2px solid #fff;
+  border-radius: 0px;
+  cursor: text;
+}
+
+input[type="text"]:focus-visible {
+  outline: 2px solid #fff;
+  outline-offset: 2px;
+}
+
+/* checkbox */
+.search-form__fieldset-title {
+  display: flex;
+  padding: 0px 0px 5px;
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__label-text {
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  user-select: none;
+  padding: 0px 0px 0px 5px;
+}
+
+.search-form__checkbox-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 12px;
+  justify-content: center;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  vertical-align: middle;
+  background-color: transparent;
+}
+
+.search-form__checkbox[type="checkbox"]:checked
+  + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  border: 2px;
+  width: 14px;
+  height: 14px;
+  background: rgb(255, 255, 255);
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+  background-color: transparent;
+}
+
+/* Кнопка Найти */
+.button {
+  display: flex;
+  margin-top: auto;
+  flex-direction: column-reverse;
+  width: 194px;
+  height: 34px;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px 0px 0px 0px;
+  color: #fff;
+  text-align: center;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  appearance: none;
+  background-color: transparent;
+}
+
+button[type="submit"] {
+  border: 1px solid #fff;
+}
+
+button[type="submit"]:active {
+  border: 1px solid #fff;
+  background-color: #545050;
+}
+
+button[type="submit"]:hover {
+  border: 1px solid #fff;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+button[type="submit"]:focus {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+  background-color: transparent;
+}
+
+/* по-смотри в окно */
+.title {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+  padding: 0px 0px 15px 5px;
+  user-select: none;
+}
+
+.content__accent {
+  color: #545050;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+/* Карточки */
+.content__list {
+  display: grid;
+  gap: 30px;
+  width: 429px;
+  height: 307px;
+  overflow-y: scroll;
+  position: relative;
+  padding: 5px 5px 0px 5px;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+}
+
+.content__video-card-description-container {
+  max-width: 200px;
+}
+
+.content__video-card {
+  display: flex;
+  padding: 2px;
+  justify-content: space-between;
+  text-decoration: none;
+  width: 398px;
+  height: 107px;
+  outline: none;
+}
+
+.content__video-card:active {
+  background-color: #545050;
+  outline: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+  outline: none;
+  width: 394px;
+}
+
+.content__list-item:hover {
+  cursor: pointer;
+  text-decoration: underline #fff;
+  text-underline-offset: 3px;
+}
+
+a:focus-visible {
+  outline: 1px solid #ffffff;
+  outline-offset: 2px;
+  background-color: transparent;
+  width: 398px;
+}
+
+/* оглавление */
+.content__video-card-title {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+  padding: 0px 0px 4px;
+  margin-top: 4px;
+}
+
+.content__video-card-description {
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px;
+}
+
+/* Кнопка Показать ещё */
+.more-button {
+  display: flex;
+  width: 392px;
+  height: 34px;
+  justify-content: center;
+  align-items: center;
+  margin: 3px;
+}
+
+.more-button {
+  border: 1px solid #fff;
+}
+
+.more-button:active {
+  border: 1px solid #fff;
+  background-color: #545050;
+}
+
+.more-button:hover {
+  border: 1px solid #fff;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.more-button:focus {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+  background-color: transparent;
 }
