--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ html {
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  padding: 133px 30px;
+  padding: 135px 30px;
 }
 
 h1,
@@ -51,7 +51,7 @@ ol {
   height: 386px;
 }
 
-video {
+.result__video {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -80,33 +80,33 @@ video {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  outline: none;
   color: rgba(255, 255, 255, 0.7);
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  line-height: 22px;
+  line-height: normal;
   font-style: normal;
   font-weight: 400;
 }
 
-input[type="text"] {
+.search-form__textfield[type="text"] {
   border-top: 2px solid #fff;
   border-bottom: 2px solid #fff;
   padding: 1px 0px;
 }
 
-input[type="text"]:active {
+.search-form__textfield[type="text"]:active {
   border: 2px solid #fff;
-  border-radius: 0px;
 }
 
-input[type="text"]:hover {
-  border: 2px solid #fff;
-  border-radius: 0px;
+.search-form__textfield[type="text"]:hover {
   cursor: text;
 }
 
-input[type="text"]:focus-visible {
+.search-form__textfield[type="text"]:focus {
+  outline: none;
+}
+
+.search-form__textfield[type="text"]:focus-visible {
   outline: 2px solid #fff;
   outline-offset: 2px;
 }
@@ -114,9 +114,9 @@ input[type="text"]:focus-visible {
 /* checkbox */
 .search-form__fieldset-title {
   display: flex;
-  padding: 0px 0px 5px;
+  margin: 0px 0px 5px;
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -125,18 +125,17 @@ input[type="text"]:focus-visible {
 
 .search-form__label-text {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   user-select: none;
-  padding: 0px 0px 0px 5px;
 }
 
 .search-form__checkbox-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 12px;
   justify-content: center;
 }
@@ -155,6 +154,7 @@ input[type="text"]:focus-visible {
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 5px;
 }
 
 .search-form__pseudo-checkbox {
@@ -168,72 +168,74 @@ input[type="text"]:focus-visible {
   background-color: transparent;
 }
 
-.search-form__checkbox[type="checkbox"]:checked
-  + .search-form__pseudo-checkbox::after {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: "";
   display: block;
   border: 2px;
-  width: 14px;
-  height: 14px;
+  width: 15px;
+  height: 15px;
   background: rgb(255, 255, 255);
+}
+
+.search-form__label-text:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 2px;
-  background-color: transparent;
 }
 
 /* Кнопка Найти */
 .button {
   display: flex;
   margin-top: auto;
-  flex-direction: column-reverse;
-  width: 194px;
-  height: 34px;
+  border: 1px solid #fff;
   justify-content: center;
   align-items: center;
-  bottom: 20px 0px 0px 0px;
+  background-color: transparent;
+  cursor: pointer;
   color: #fff;
   text-align: center;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   appearance: none;
-  background-color: transparent;
 }
 
-button[type="submit"] {
-  border: 1px solid #fff;
+.search-form__submit-button {
+  width: 194px;
+  height: 34px;
 }
 
-button[type="submit"]:active {
-  border: 1px solid #fff;
+button:active {
   background-color: #545050;
 }
 
-button[type="submit"]:hover {
-  border: 1px solid #fff;
-  cursor: pointer;
+button:hover {
   text-decoration: underline;
 }
 
-button[type="submit"]:focus {
+button:focus {
+  outline: none;
+}
+
+button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 2px;
-  background-color: transparent;
 }
 
 /* по-смотри в окно */
 .title {
   color: #fff;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
   padding: 0px 0px 15px 5px;
   user-select: none;
@@ -241,7 +243,7 @@ button[type="submit"]:focus {
 
 .content__accent {
   color: #545050;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
@@ -255,63 +257,70 @@ button[type="submit"]:focus {
   gap: 30px;
   width: 429px;
   height: 307px;
-  overflow-y: scroll;
+  overflow: auto;
   position: relative;
   padding: 5px 5px 0px 5px;
-}
-
-.content__video-card-thumbnail {
-  width: 194px;
-  height: 103px;
 }
 
 .content__card-link {
   display: block;
   text-decoration: none;
+  width: 393px;
+  height: 107px;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
-  max-width: 200px;
+  flex-grow: 1;
 }
 
 .content__video-card {
   display: flex;
   padding: 2px;
   justify-content: space-between;
-  text-decoration: none;
   width: 398px;
   height: 107px;
-  outline: none;
 }
 
-.content__video-card:active {
+.content__card-link:active {
   background-color: #545050;
   outline: none;
 }
 
 .content__card-link_current {
   background-color: #545050;
-  outline: none;
-  width: 394px;
 }
 
-.content__list-item:hover {
+.content__card-link:hover {
   cursor: pointer;
   text-decoration: underline #fff;
   text-underline-offset: 3px;
 }
 
-a:focus-visible {
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
   outline: 1px solid #ffffff;
   outline-offset: 2px;
-  background-color: transparent;
-  width: 398px;
+}
+
+.content__card-link:focus-visible:has(.content__card-link:active) {
+  outline: 1px solid #ffffff;
+  outline-offset: 2px;
 }
 
 /* оглавление */
 .content__video-card-title {
   color: #fff;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
@@ -323,7 +332,7 @@ a:focus-visible {
 
 .content__video-card-description {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -332,31 +341,7 @@ a:focus-visible {
 
 /* Кнопка Показать ещё */
 .more-button {
-  display: flex;
   width: 392px;
   height: 34px;
-  justify-content: center;
-  align-items: center;
   margin: 3px;
-}
-
-.more-button {
-  border: 1px solid #fff;
-}
-
-.more-button:active {
-  border: 1px solid #fff;
-  background-color: #545050;
-}
-
-.more-button:hover {
-  border: 1px solid #fff;
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.more-button:focus {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
-  background-color: transparent;
 }
