--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ ol {
   font-weight: 400;
 }
 
-.search-form__textfield[type="text"] {
+.search-form__textfield {
   border-top: 2px solid #fff;
   border-bottom: 2px solid #fff;
   padding: 1px 0px;
@@ -177,7 +177,7 @@ ol {
   background: rgb(255, 255, 255);
 }
 
-.search-form__label-text:hover {
+.search-form__label:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -195,6 +195,7 @@ ol {
   justify-content: center;
   align-items: center;
   background-color: transparent;
+  height: 34px;
   cursor: pointer;
   color: #fff;
   text-align: center;
@@ -204,26 +205,26 @@ ol {
   font-weight: 700;
   line-height: normal;
   appearance: none;
+
 }
 
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
 }
 
-button:active {
+.button:active {
   background-color: #545050;
 }
 
-button:hover {
+.button:hover {
   text-decoration: underline;
 }
 
-button:focus {
+.button:focus {
   outline: none;
 }
 
-button:focus-visible {
+.button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 2px;
 }
@@ -247,7 +248,7 @@ button:focus-visible {
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
 }
 
@@ -290,7 +291,6 @@ button:focus-visible {
 
 .content__card-link:active {
   background-color: #545050;
-  outline: none;
 }
 
 .content__card-link_current {
@@ -308,11 +308,6 @@ button:focus-visible {
 }
 
 .content__card-link:focus-visible {
-  outline: 1px solid #ffffff;
-  outline-offset: 2px;
-}
-
-.content__card-link:focus-visible:has(.content__card-link:active) {
   outline: 1px solid #ffffff;
   outline-offset: 2px;
 }
@@ -342,6 +337,5 @@ button:focus-visible {
 /* Кнопка Показать ещё */
 .more-button {
   width: 392px;
-  height: 34px;
   margin: 3px;
 }
