--- a/styles/style.css
+++ b/styles/style.css
@@ -94,19 +94,19 @@ ol {
   padding: 1px 0px;
 }
 
-.search-form__textfield[type="text"]:active {
+.search-form__textfield:active {
   border: 2px solid #fff;
 }
 
-.search-form__textfield[type="text"]:hover {
+.search-form__textfield:hover {
   cursor: text;
 }
 
-.search-form__textfield[type="text"]:focus {
+.search-form__textfield:focus {
   outline: none;
 }
 
-.search-form__textfield[type="text"]:focus-visible {
+.search-form__textfield:focus-visible {
   outline: 2px solid #fff;
   outline-offset: 2px;
 }
@@ -177,7 +177,7 @@ ol {
   background: rgb(255, 255, 255);
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -205,7 +205,6 @@ ol {
   font-weight: 700;
   line-height: normal;
   appearance: none;
-
 }
 
 .search-form__submit-button {
